samples/_failures_safe/1761443729_0517ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37d438c9.c: In function ‘main’:
./samples/SAFE/__tmp_37d438c9.c:152:43: error: missing terminating " character
  152 |                     print_matrix(&result, "A + B
      |                                           ^~~~~~
./samples/SAFE/__tmp_37d438c9.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&result, "A + B
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_37d438c9.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37d438c9.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37d438c9.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37d438c9.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37d438c9.c:152:21: error: expected declaration or statement at end of input
